<resources>
    <string name="app_name">SeniorThesis</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="picture">picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This App Requires Camera Permission</string>
    <string name="camera_error">This Device Doesn\'t support the Camera2 API</string>
    <string name="intro_message">There is no activity!</string>

    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_container">ContainerActivity</string>
    <string name="TakePhotoInstruction">Welcome to my Exploration into image processing and machine learning on Android!
        To start, We need to pick a photo. TODO: Make the UI Better and let the user change the settings of the Learner </string>
    <string name="choose_photo_from_gallery">Choose Photo From Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="Train_or_classify_prompt">Now, should we train our model with this image or try to predict what it is?</string>
    <string name="train_it">Train</string>
    <string name="Test">Test</string>
    <string name="Choose_another_photo">Choose Another Photo</string>
    <string name="Statistics_Text">Statistics will show up here when Training is done</string>
    <string name="test_with_trained_data">Test With Trained Data</string>
    <string name="TestAllPrompt">Please pick which location to test:</string>
    <string name="ResultsPrompt">Results will show up here when classification is done</string>
    <string name="TRAINPrompt">TRAIN (%1$d)</string>
</resources>
