<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.hendrix.huynhem.seniorthesis.UI.TrainOrClassifyFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Train_or_classify_prompt" />

        <Button
            android:id="@+id/Train_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/train_it" />

        <Button
            android:id="@+id/Test_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Test" />
    </LinearLayout>

</RelativeLayout>
