<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.hendrix.huynhem.seniorthesis.UI.TestWithTrainedDataFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TestAllPrompt" />

    <Spinner
        android:id="@+id/TestAllSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/Start Training"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Test" />

    <ProgressBar
        android:id="@+id/TestAllProgressbar"
        style="@style/?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TestAllResultsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ResultsPrompt" />
</LinearLayout>
